--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -3,6 +3,5 @@ import BaseLayout from "../layouts/BaseLayout.astro";
 // import * from "../components/xxx.svelte"
 ---
 
-<BaseLayout title="Home">
-	<img src="../oof.jpg" alt="Temporary meme picture" width="200" height="200">
+<BaseLayout title="About">
 </BaseLayout>
