--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -33,7 +33,7 @@ const {title} = Astro.props;
 	</head>
 	<body>
         <nav>
-            <a href="/">Home</a>
+            <a href="../index">Home</a>
             <a href="../about">About</a>
             <a href="../projects">Projects</a>
             <a href="../blog">Blog</a>
