--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,9 @@
 ---
-import BaseLayout from "../layouts/BaseLayout.astro";
-// import * from "../components/xxx.svelte"
+import Base from "../components/Base.svelte";
 ---
 
-<BaseLayout title="Home">
-	<img src="../oof.jpg" alt="Temporary meme picture" width="200" height="200">
-</BaseLayout>
+<Base title={"Home"}>
+	<div>
+		<h1 class="font-mono text-9xl text-right my-16 mr-14">Leon Wang</h1>
+	</div>
+</Base>
