--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -1,7 +1,7 @@
 ---
-import BaseLayout from "../layouts/BaseLayout.astro";
-// import * from "../components/xxx.svelte"
+import Base from "../components/Base.svelte";
 ---
 
-<BaseLayout title="Projects">
-</BaseLayout>
+<Base title={"Projects"}>
+    <div></div>
+</Base>
