--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,7 +1,7 @@
 ---
-import BaseLayout from "../layouts/BaseLayout.astro";
-// import * from "../components/xxx.svelte"
+import Base from "../components/Base.svelte";
 ---
 
-<BaseLayout title="Blog">
-</BaseLayout>
+<Base title={"Blog"}>
+    <div></div>
+</Base>
