--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -2,6 +2,6 @@
 import Base from "../components/Base.svelte";
 ---
 
-<Base title={"About"}>
+<Base client:load title={"About"}>
     <div></div>
 </Base>
