--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -2,6 +2,6 @@
 import Base from "../components/Base.svelte";
 ---
 
-<Base title={"Blog"}>
+<Base client:load title={"Blog"}>
     <div></div>
 </Base>
