--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -2,6 +2,6 @@
 import Base from "../components/Base.svelte";
 ---
 
-<Base title={"Projects"}>
+<Base client:load title={"Projects"}>
     <div></div>
 </Base>
