--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,7 +2,7 @@
 import Base from "../components/Base.svelte";
 ---
 
-<Base client:load title={"Home"}>
+<Base title={"Home"}>
 	<div>
 		<h1 class="font-mono text-9xl text-right my-16 mr-14">Leon Wang</h1>
 	</div>
