--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -1,9 +1,7 @@
 ---
-import Bar from "../components/Bar.svelte";
-import Base from "../components/Base.svelte";
+import Layout from '../layouts/Layout.astro';
 ---
 
-<Bar client:only/>
-<Base title={"Projects"}>
+<Layout title="Projects">
     <div></div>
-</Base>
+</Layout>
