--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -18,17 +18,14 @@ const { title } = Astro.props;
 		<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
 		<meta name="msapplication-TileColor" content="#da532c">
 		<meta name="theme-color" content="#ffffff">
-		<meta name="turbo-cache-control" content="no-cache" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
-		<script>
-			import '../scripts/router.ts';
-		</script>
 	</head>
 	<body class="bg-base">
-		<div data-turbo-permanent id="loading-bar">
-			<Bar client:load />
-		</div>
+		<script>
+			import '../scripts/flamethrower';
+		</script>
+		<Bar client:only/>
 		<Header/>
 		<main>
 			<slot />
