--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,5 @@
 ---
+import '../styles/global.css';
 import Bar from '../components/Bar.svelte';
 import Header from '../components/Header.svelte';
 import Footer from '../components/Footer.svelte';
@@ -20,17 +21,17 @@ const { title } = Astro.props;
 		<meta name="theme-color" content="#ffffff">
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
-	</head>
-	<body class="bg-base">
 		<script>
-			import '../scripts/flamethrower';
+			import '../scripts/turbo.ts';
 		</script>
+	</head>
+	<body>
 		<Bar client:only/>
 		<Header/>
 		<main>
 			<slot />
 			<div>
-				<p class="text-center">{title.toLowerCase()} page! in progress.</p>
+				<p class="placeholder">{title.toLowerCase()} page! in progress.</p>
 			</div>
 		</main>
 		<Footer/>
