--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,6 @@ import Layout from '../layouts/Layout.astro';
 
 <Layout title="Home">
 	<div>
-		<h1 class="font-mono text-9xl text-right my-16 mr-14">Leon Wang</h1>
+		<h1 id="name">Leon Wang</h1>
 	</div>
 </Layout>
