loading bar finally works

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,3 +7,14 @@ import Layout from '../layouts/Layout.astro';
 		<h1 id="name">Leon Wang</h1>
 	</div>
 </Layout>
+
+<style>
+	#name {
+    	font-size: 8rem;
+    	line-height: 1;
+    	text-align: right;
+    	margin-top: 4rem;
+    	margin-bottom: 4rem;
+    	margin-right: 3.5rem;
+	}
+</style>
