--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-import leonlogo from '../images/leonlogo.png';
+import leonlogo from '/assets/leonlogo.png';
 import Layout from '../layouts/Layout.astro';
 ---
 
