--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,7 +1,14 @@
 html {
-    background-color: #eae7dc;
+    background-color: #FFEEDF;
     font-family: 'IBM Plex Mono', Arial, Helvetica, sans-serif, system-ui;
     color: #2B2222;
+}
+
+main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-rendering: optimizeLegibility;
 }
 
 h1 {
