--- a/src/layouts/BlogLayout.astro
+++ b/src/layouts/BlogLayout.astro
@@ -1,6 +1,7 @@
 ---
 import '../styles/global.css';
 import { getDate } from '../scripts/date';
+import Tag from '../components/Tag.svelte';
 import Bar from '../components/Bar.svelte';
 import Header from '../components/Header.svelte';
 import Footer from '../components/Footer.svelte';
@@ -35,7 +36,7 @@ if (frontmatter.lastUpdate === null) { update = null; }
 					<h1 id="blog-title">{frontmatter.title}</h1>
 					<p>{frontmatter.description}</p>
 					<nav id="tags">
-						{tags.map((tag) => <a class="tag">{tag}</a>)}
+						{tags.map((tag) => <Tag tagName={tag}/>)}
 					</nav>
 					<p id="date">{"Published on " + date}</p>
 					{date != update && update != null && <p id="update" style="margin-block-start: 0.2em;">{"Last updated on " + update}</p>}
@@ -49,15 +50,9 @@ if (frontmatter.lastUpdate === null) { update = null; }
 </html>
 
 <style>
-	.tag {
-		display: inline-block;
-		text-transform: uppercase;
-		font-size: 0.8rem;
-		line-height: 1;
-		padding: 0.2em 0.5em;
-		margin-right: 0.8em;
-		background-color: #E6A595;
-		text-decoration: none;
+	#tags {
+		display: inline;
+		line-height: 1.5;
 	}
 	#content {
 		max-width: 768px;
@@ -78,17 +73,19 @@ if (frontmatter.lastUpdate === null) { update = null; }
 		opacity: 0.7;
 		font-size: 0.75rem;
 	}
-	#tags {
-		display: inline;
-		line-height: 1.5;
-	}
 	#back, #back:visited {
 		color: inherit;
 		text-decoration: none;
 		opacity: 0.7;
 		font-size: 0.8rem;
+		transition-property: all;
+        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+        transition-duration: 0.33s;
 	}
 	#back:hover {
 		opacity: 1;
+		transition-property: all;
+        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+        transition-duration: 0.33s;
 	}
 </style>
