--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -3,5 +3,5 @@ import Layout from '../layouts/Layout.astro';
 ---
 
 <Layout title="Projects">
-    <div></div>
+    <div>Under construction.</div>
 </Layout>
