--- a/src/layouts/BlogLayout.astro
+++ b/src/layouts/BlogLayout.astro
@@ -1,91 +1,29 @@
 ---
-import '../styles/global.css';
-import { getDate } from '../scripts/date';
+import '../styles/card.css';
 import Tag from '../components/Tag.svelte';
-import Bar from '../components/Bar.svelte';
-import Header from '../components/Header.svelte';
-import Footer from '../components/Footer.svelte';
-
-const { frontmatter } = Astro.props;
-
-let tags : Array<string> = frontmatter.tags;
-let date = getDate(new Date(frontmatter.pubDate));
-let update = getDate(new Date(frontmatter.lastUpdate));
-if (frontmatter.lastUpdate === null) { update = null; }
+import { getDate } from '../scripts/date';
+const { posts } = Astro.props;
 ---
 
-<!DOCTYPE html>
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href={Astro.url.origin + "/favicon.svg"} />
-		<meta name="generator" content={Astro.generator} />
-		<title>{frontmatter.title + " | Blog"}</title>
-		<script>
-			import '../scripts/turbo.ts';
-		</script>
-	</head>
-	<body>
-		<Bar client:only/>
-		<Header/>
-		<main>
-			<div id="content">
-				<div id="post">
-					<a href="/blog" id="back">&#5130;&#5130; back</a>
-					<h1 id="blog-title">{frontmatter.title}</h1>
-					<p>{frontmatter.description}</p>
-					<nav id="tags">
-						{tags.map((tag) => <Tag tagName={tag}/>)}
-					</nav>
-					<p id="date">{"Published on " + date}</p>
-					{date != update && update != null && <p id="update" style="margin-block-start: 0.2em;">{"Last updated on " + update}</p>}
-					<div style="margin-block: 2.5em;"></div>
-					<slot />
-				</div>
-			</div>
-		</main>
-		<Footer/>
-	</body>
-</html>
-
-<style>
-	#tags {
-		display: inline;
-		line-height: 1.5;
-	}
-	#content {
-		max-width: 768px;
-		width: 100%;
-	}
-	#post {
-		padding-left: 2rem;
-		padding-right: 2rem;
-		text-align: left;
-	}
-	#blog-title {
-		font-size: 3rem;
-		margin-block-start: 0.5em;
-		margin-block-end: 0.2em;
-	}
-	#date, #update {
-		margin-block-end: 0.2em;
-		opacity: 0.7;
-		font-size: 0.75rem;
-	}
-	#back, #back:visited {
-		color: inherit;
-		text-decoration: none;
-		opacity: 0.7;
-		font-size: 0.8rem;
-		transition-property: all;
-        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-        transition-duration: 0.33s;
-	}
-	#back:hover {
-		opacity: 1;
-		transition-property: all;
-        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-        transition-duration: 0.33s;
-	}
-</style>
+<ul id="cards">
+    {
+      posts.map((post, index) => (
+          <li id="card-box">
+              <a id="url" href={post.url}>
+                <div id="card">
+                    <div style="padding: 2.5rem;">
+                        <span id="card-title">{post.frontmatter.title}</span>
+                        <p>{post.frontmatter.description}</p>
+                        <div style="display: flex; justify-content: space-between;">
+                            <p style="opacity: 0.6; font-size: 0.8rem;">{getDate(new Date(post.frontmatter.pubDate))}</p>
+                        </div>
+                        <nav style="display: flex; line-height: 1.5;">
+                            {post.frontmatter.tags.map((tag) => <Tag tagName={tag}/>)}
+                        </nav>
+                    </div>
+                </div>
+              </a>
+          </li>
+      ))
+    }
+</ul>
