--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -2,10 +2,9 @@
 import Layout from '../layouts/Layout.astro';
 import BlogLayout from '../layouts/BlogLayout.astro';
 
-const posts = (await Astro.glob("./blog/*.md")).sort(
-  (a, b) =>
-    new Date(b.frontmatter.pubDate).valueOf() -
-    new Date(a.frontmatter.pubDate).valueOf()
+const posts = (await Astro.glob("./blog/*.md")).sort((a, b) =>
+    new Date(b.frontmatter.lastUpdate).valueOf() -
+    new Date(a.frontmatter.lastUpdate).valueOf()
 );
 ---
 
