--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,7 @@
 ---
 import '../styles/global.css';
 import Bar from '../components/Bar.svelte';
+import Home from '../components/Home.svelte';
 import Header from '../components/Header.svelte';
 import Footer from '../components/Footer.svelte';
 
@@ -20,8 +21,14 @@ const { title } = Astro.props;
 		</script>
 	</head>
 	<body>
-		<Bar client:only/>
-		<Header/>
+		<div data-turbo-permanent id="loading-bar">
+			<Bar client:only="svelte"/>
+		</div>
+		<Header>
+			<div data-turbo-permanent id="home-icon">
+				<Home client:only="svelte"/>
+			</div>
+		</Header>
 		<main>
 			<slot />
 		</main>
