--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -8,7 +8,7 @@ const posts = (await Astro.glob("./blog/*.md")).sort((a, b) =>
 );
 ---
 
-<Layout title="Blog">
+<Layout title="Leon Wang | Blog">
     <div style="padding-block-end: 3rem;"></div>
     <BlogLayout posts={posts} />
 </Layout>
