--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -2,6 +2,6 @@
 import Layout from '../layouts/Layout.astro';
 ---
 
-<Layout title="Projects">
+<Layout title="Leon Wang | Projects">
     <div>Under construction.</div>
 </Layout>
