--- a/src/layouts/PostLayout.astro
+++ b/src/layouts/PostLayout.astro
@@ -22,7 +22,7 @@ if (frontmatter.lastUpdate === null) { update = null; }
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href={Astro.url.origin + "/favicon.svg"} />
 		<meta name="generator" content={Astro.generator} />
-		<title>{frontmatter.title + " | Blog"}</title>
+		<title>{"Leon Wang | " + frontmatter.title}</title>
 		<script>
 			import '../scripts/turbo.ts';
 		</script>
