--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,7 @@ import leonlogo from '/assets/leonlogo.png';
 import Layout from '../layouts/Layout.astro';
 ---
 
-<Layout title="Home">
+<Layout title="Leon Wang">
 	<div id="flexbox">
 		<div id="child">
 			<img id="logo" src={leonlogo} alt="leon-logo"/>
