--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -3,5 +3,5 @@ import Layout from '../layouts/Layout.astro';
 ---
 
 <Layout title="404">
-    <div>Under construction.</div>
+    <h1 style="font-size: 15rem;">404</h1>
 </Layout>
