--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -3,5 +3,5 @@ import Layout from '../layouts/Layout.astro';
 ---
 
 <Layout title="Leon Wang | Projects">
-    <div>Under construction.</div>
+    <h1 style="font-size: 2.5rem; padding: 6rem; margin-top: 6rem; margin-bottom: 6rem;">🛑 🚧 Under Construction 🚧 🛑</h1>
 </Layout>
