--- a/src/layouts/BlogLayout.astro
+++ b/src/layouts/BlogLayout.astro
@@ -10,7 +10,7 @@ const { posts } = Astro.props;
       posts.map((post, index) => (
           <li id="card-box">
                 <div id="card">
-                    <a id="url" href={post.url}>
+                    <a rel="prefetch" id="url" href={post.url}>
                       <div style="height: 14rem;">
                         <div style="padding: 2.5rem;">
                           <span id="card-title">{post.frontmatter.title}</span>
