--- a/src/layouts/PostLayout.astro
+++ b/src/layouts/PostLayout.astro
@@ -6,6 +6,7 @@ import Bar from '../components/Bar.svelte';
 import Home from '../components/Home.svelte';
 import Header from '../components/Header.svelte';
 import Footer from '../components/Footer.svelte';
+import MobileHeader from '../components/MobileHeader.svelte';
 
 const { frontmatter } = Astro.props;
 
@@ -19,7 +20,7 @@ if (frontmatter.lastUpdate === null) { update = null; }
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="icon" type="image/svg+xml" href={Astro.url.origin + "/favicon.svg"} />
 		<meta name="generator" content={Astro.generator} />
 		<title>{"Leon Wang | " + frontmatter.title}</title>
@@ -36,6 +37,9 @@ if (frontmatter.lastUpdate === null) { update = null; }
 				<Home client:only="svelte"/>
 			</div>
 		</Header>
+		<div id="navbar-mobile">
+			<MobileHeader client:only="svelte"/>
+		</div>
 		<main>
 			<div id="content" style="max-width: 768px; width: 100%;">
 				<div id="post">
@@ -90,5 +94,13 @@ if (frontmatter.lastUpdate === null) { update = null; }
 	#tags > * {
 		all: inherit;
 		margin-right: 0.8rem;
+	}
+	#navbar-mobile {
+		display: none;
+	}
+    @media screen and (max-width: 768px) {
+		#navbar-mobile {
+			display: flex;
+		}
 	}
 </style>
