more mobile optimizations

--- a/src/layouts/BlogLayout.astro
+++ b/src/layouts/BlogLayout.astro
@@ -11,7 +11,7 @@ const { posts } = Astro.props;
           <li id="card-box">
                 <div id="card">
                     <a rel="prefetch" id="url" href={post.url}>
-                      <div style="height: 14rem;">
+                      <div style="height: auto;">
                         <div style="padding: 2.5rem;">
                           <span id="card-title">{post.frontmatter.title}</span>
                           <p>{post.frontmatter.description}</p>
