--- a/src/layouts/PostLayout.astro
+++ b/src/layouts/PostLayout.astro
@@ -61,6 +61,9 @@ if (frontmatter.lastUpdate === null) { update = null; }
 </html>
 
 <style>
+	#content {
+		margin-top: 4rem;
+	}
 	#post {
 		padding-left: 2rem;
 		padding-right: 2rem;
@@ -101,6 +104,9 @@ if (frontmatter.lastUpdate === null) { update = null; }
     @media screen and (max-width: 768px) {
 		#navbar-mobile {
 			display: flex;
+		}
+		#content {
+			margin-top: 5rem !important;
 		}
 	}
 </style>
