--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -3,5 +3,5 @@ import Layout from '../layouts/Layout.astro';
 ---
 
 <Layout title="Leon Wang | About">
-    <h1 style="font-size: 2.5rem; padding: 6rem; margin-top: 6rem; margin-bottom: 6rem;">🛑 🚧 Under Construction 🚧 🛑</h1>
+    <h1 style="font-size: auto; padding: 2rem; margin-top: 6rem; margin-bottom: 6rem; text-align: center;">🛑 🚧 Under Construction 🚧 🛑</h1>
 </Layout>
