--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ import Layout from '../layouts/Layout.astro';
 		<div id="child">
 			<img id="logo" src={leonlogo} alt="leon-logo"/>
 		</div>
-		<h1 id="name">Leon Wang</h1>
+		<h1 id="name" style="font-family: 'Anonymous Pro';">Leon Wang</h1>
 	</div>
 </Layout>
 
