draft about page

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,7 +1,9 @@
 ---
+import About from '../components/About.svelte';
+import voronoi from '/assets/me-voronoi.png';
 import Layout from '../layouts/Layout.astro';
 ---
 
 <Layout title="Leon Wang | About">
-    <h1 style="font-size: auto; padding: 2rem; margin-top: 6rem; margin-bottom: 6rem; text-align: center;">🛑 🚧 Under Construction 🚧 🛑</h1>
+    <About src={voronoi}/>
 </Layout>
