--- a/src/layouts/PostLayout.astro
+++ b/src/layouts/PostLayout.astro
@@ -45,7 +45,7 @@ if (frontmatter.lastUpdate === null) { update = null; }
 				<div id="post">
 					<a href="/blog" id="back">&#5130;&#5130; back</a>
 					<h1 id="blog-title">{frontmatter.title}</h1>
-					<p>{frontmatter.description}</p>
+					<p id="desc">{frontmatter.description}</p>
 					<div id="tags" style="display: inline; line-height: 1.5;">
 						{tags.map((tag) => <div><Tag tagName={tag}/></div>)}
 					</div>
@@ -61,15 +61,23 @@ if (frontmatter.lastUpdate === null) { update = null; }
 </html>
 
 <style>
+	#tags, #date, #update, #desc, #back {
+		font-family: 'IBM Plex Mono';
+	}
+	#desc {
+		font-size: 0.8rem;
+	}
 	#content {
 		margin-top: 4rem;
 	}
 	#post {
+		font-family: 'SF-Pro';
 		padding-left: 2rem;
 		padding-right: 2rem;
 		text-align: left;
 	}
 	#blog-title {
+		font-family: 'SF-Pro';
 		font-size: 3rem;
 		margin-block-start: 0.5em;
 		margin-block-end: 0.2em;
@@ -102,6 +110,15 @@ if (frontmatter.lastUpdate === null) { update = null; }
 		display: none;
 	}
     @media screen and (max-width: 768px) {
+		#back, #back:hover {
+			font-size: 0.6rem;
+			padding: 0.26rem;
+			padding-left: 1rem;
+			padding-right: 1rem;
+			border: 1px solid;
+			border-color: #695c5c;
+			opacity: 1;
+		}
 		#navbar-mobile {
 			display: flex;
 		}
