--- a/src/styles/card.css
+++ b/src/styles/card.css
@@ -49,10 +49,9 @@
     text-decoration: none;
 }
 #card-title {
+    font-family: 'Inter';
     opacity: 0.9;
-    font-size: 2rem;
-    font-family: "IBM Plex Mono" !important;
-    font-weight: 750;
+    font-size: 2.5rem;
 }
 #tag-box {
     position: relative;
@@ -62,4 +61,25 @@
     transition-property: opacity;
     transition-timing-function: cubic-bezier(0.7, 0, 0.2, 1);
     transition-duration: 0.5s;
+}
+@media screen and (max-width: 768px) {
+    #tag-box {
+        display: none;
+    }
+    #card, #card:hover {
+        box-shadow: 0px 0px 0px #2B2222;
+        border: 1px;
+        border-style: solid;
+        border-color: #2B2222;
+        background-color: aliceblue;
+        display: flex;
+        flex-direction: column;
+        height: auto;
+        justify-content: space-between;
+        position: relative;
+        transform: none !important;
+        transition-property: none !important;
+        transition-timing-function: none !important;
+        transition-duration: none !important;
+    }
 }
