--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -11,10 +11,34 @@ main {
     text-rendering: optimizeLegibility;
 }
 
-h1 {
-    font-family: 'IBM Plex Mono', monospace, 'Courier New', Courier, system-ui;
+h1, h2, h3 {
+    font-family: 'Inter', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .turbo-progress-bar {
     visibility: hidden;
+}
+
+@font-face {
+    font-family: 'SF-Pro';
+    src: url('/fonts/sf-pro.woff2') format('woff2');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Inter';
+    src: url('/fonts/inter.woff2') format('woff2');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Spock';
+    src: url('/fonts/spock.woff2') format('woff2');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
 }
