--- a/src/layouts/PostLayout.astro
+++ b/src/layouts/PostLayout.astro
@@ -62,7 +62,7 @@ if (frontmatter.lastUpdate === null) { update = null; }
 
 <style>
 	#tags, #date, #update, #desc, #back {
-		font-family: 'IBM Plex Mono';
+		font-family: 'IBM Plex Mono', monospace, 'Courier New', Courier, system-ui;
 	}
 	#desc {
 		font-size: 0.8rem;
